# TanTrix

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: api.rs  game.rs  generation.rs  main.rs  piece.rs
frontend/: package.json
frontend/src/: App.css  App.tsx  Tile.css  Tile.tsx
frontend/src/api/: index.ts
src/: game.rs  main.rs  piece.rs
