[package]
name = "tantrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
tiny_http = "0.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rand = "0.8.5"